# pffft-synth

./: .gitignore  CMakeLists.txt
.github/workflows/: build-cmake.yml
src/: CMakeLists.txt  CMakePresets.json  pffastconv.c  pffft.c
